--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,18 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-# Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
-# PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://localhost:5432/vaadinstart
-spring.datasource.username = vaadinstart
-spring.datasource.password = vaadinstart
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = 812421
 spring.jpa.hibernate.ddl-auto = update
-# To improve the performance during development.
-# For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,de.shopitech.compa
 spring.jpa.defer-datasource-initialization = true
+
+admin.username=Arthur.schimpf@gmx.de
+admin.password=812421
+unsplash.accesskey=u0xvJiJLBAZB_akVTKYBxQd4eHV7PtPCehPemXScMDo
+unsplash.secret=9vU6Iudahi0pjfuIL_4ct1irNlwf1b4SzAY_kKz0YMw
